# lws-protocol-sdk-c-esp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  idf.bat  sdkconfig
components/lws-iot-esp/: CMakeLists.txt
components/lws-iot-esp/include/: lws_protocol.h
components/lws-iot-esp/src/: lws_protocol.c
docs/: esp-env.md
main/: CMakeLists.txt
main/src/: lws-esp-demo-main.c
